--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ node_modules/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore .env file containing credentials.
+.env
+
+.vscode
