--- a/config/database.yml
+++ b/config/database.yml
@@ -17,22 +17,29 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: dev
+  password: <%= ENV['postgres_DATABASE_PASSWORD'] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: blog_app
+  database: rails_blog_development
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  username: dev
+  password: password
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  #username: rails_blog
 
   # The password associated with the postgres role (username).
-  password: ogato2018
+  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,9 +64,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_app_test
-  username: postgres
-  password: ogato2018
+  database: rails_blog_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +88,6 @@ test:
 #
 production:
   <<: *default
-  database: Project_production
-  username: Project
-  password: <%= ENV["PROJECT_DATABASE_PASSWORD"] %>
+  database: rails_blog_production
+  username: dev
+  password: <%= ENV["RAILS_BLOG_DATABASE_PASSWORD"] %>
