--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,4 @@ node_modules/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
-# Ignore .env file containing credentials.
-.env
-
-.vscode
-
-/app/assets/builds/*
-!/app/assets/builds/.keep
-
-/node_modules
+node_modules
