--- a/config/database.yml
+++ b/config/database.yml
@@ -18,20 +18,16 @@ default: &default
   adapter: postgresql
   encoding: unicode
   username: dev
-  password: <%= ENV['postgres_DATABASE_PASSWORD'] %>
+  password: root
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: rails_blog_development
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
+  database: rails_blog_development_1
   username: dev
-  password: password
-
+  password: root
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -64,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_blog_test
+  database: rails_blog_test_1
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -88,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_blog_production
+  database: rails_blog_production_1
   username: dev
   password: <%= ENV["RAILS_BLOG_DATABASE_PASSWORD"] %>
