--- a/config/database.yml
+++ b/config/database.yml
@@ -25,9 +25,10 @@ default: &default
 
 development:
   <<: *default
-  database: rails_blog_development_1
+  database: rails_blog_device_development
   username: dev
   password: root
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -60,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_blog_test_1
+  database: rails_blog_device_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_blog_production_1
+  database: rails_blog_device_production
   username: dev
   password: <%= ENV["RAILS_BLOG_DATABASE_PASSWORD"] %>
