--- a/config/database.yml
+++ b/config/database.yml
@@ -17,15 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: dev
-  password: root
+  username: postgres
+  password: <%= ENV['postgres_DATABASE_PASSWORD'] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: rails_blog_api_development
+  database: rails_blog_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_blog_api_test
+  database: rails_blog_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,4 +84,5 @@ test:
 production:
   <<: *default
   database: rails_blog_production
-  username: root
+  username: rails_blog
+  password: <%= ENV["RAILS_BLOG_DATABASE_PASSWORD"] %>
